--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "fastify": "^3.28.0",
     "fastify-cors": "^6.0.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "onoff": "^6.0.3"
   }
 }
